--- a/adwaterfall/src/main/res/values/strings.xml
+++ b/adwaterfall/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="popup_id">ca-app-pub-3940256099942544/1033173712</string>
     <string name="reward_id">ca-app-pub-3940256099942544/5224354917</string>
+    <string name="open_id">ca-app-pub-3940256099942544/3419835294</string>
 </resources>
